# baobao-lyrics

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  test_e2e_transcription.py  test_english_transcription.py
.github/workflows/: validate-timing.yml
archive/: test_transcription.py
baobao/: __init__.py  cli.py  enhance.py  transcribe.py
docs/claude/planning/: 00-OVERVIEW.md  TESTING-TTML-SYLT.md  TODO.md  task-1-update-claude-md.md  task-2-simplify-defaults.md  task-3-ttml-support.md  task-4-cleanup-structure.md  task-5-embed-lyrics.md  task-validation-system.md
docs/claude/prompts/: NEXT_SESSION_PROMPT.md
docs/reference/: Apple Music Specification 5.3.24.html  Overview of TTML for Lyrics - Apple Video and Audio Asset Guide.html
scripts/: generate_phrase_test.py  generate_test_audio.py  validate_timing.py
songs-more/: 01 你是我阳光 You Are My Sunshine - Bao Bao Learns Chinese.emoji.srt  01 你是我阳光 You Are My Sunshine - Bao Bao Learns Chinese.enhanced.srt  01 你是我阳光 You Are My Sunshine - Bao Bao Learns Chinese.learn.srt  01 你是我阳光 You Are My Sunshine - Bao Bao Learns Chinese.lrc  01 你是我阳光 You Are My Sunshine - Bao Bao Learns Chinese.srt  01 你是我阳光 You Are My Sunshine - Bao Bao Learns Chinese.test.enhanced.srt  01 你是我阳光 You Are My Sunshine - Bao Bao Learns Chinese.test.srt
tests/: __init__.py  conftest.py  test_e2e.py  test_enhance.py  test_transcribe.py
tests/data/: .gitkeep
