[project]
name = "baobao"
version = "0.1.0"
description = "Chinese lyrics transcription and learning tool - time-synced subtitles with pinyin and translations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "stable-ts>=2.16.0",
    "faster-whisper>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
baobao = "baobao.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["baobao"]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]
